@@ -2,25 +2,25 @@ import java.util.*;
 
 public class Main {
     public static void main(String[] args) {
-        Set<String> states = Set.of("q0", "q1", "q2");
-        Set<Character> alphabet = Set.of('a', 'b');
+        Set<String> states = new HashSet<>(Arrays.asList("q0", "q1", "q2", "q3", "q4"));
+        Set<Character> alphabet = new HashSet<>(Arrays.asList('a', 'b'));
 
         Map<String, Map<Character, Set<String>>> transitions = new HashMap<>();
-        transitions.put("q0", Map.of('a', Set.of("q1"), 'b', Set.of("q0", "q2")));
-        transitions.put("q1", Map.of('a', Set.of("q2")));
-        transitions.put("q2", Map.of('b', Set.of("q0")));
+
+        transitions.put("q0", Map.of('a', Set.of("q1")));
+        transitions.put("q1", Map.of('b', Set.of("q1"), 'a', Set.of("q2")));
+        transitions.put("q2", Map.of('b', Set.of("q2", "q3")));
+        transitions.put("q3", Map.of('b', Set.of("q4"), 'a', Set.of("q1")));
 
         String startState = "q0";
-        Set<String> finalStates = Set.of("q2");
+        Set<String> finalStates = Set.of("q4");
 
-        FiniteAutomaton nfa = new FiniteAutomaton(states, alphabet, transitions, startState, finalStates);
+        FiniteAutomaton fa = new FiniteAutomaton(states, alphabet, transitions, startState, finalStates);
+        System.out.println("Automaton Type: " + (fa.isDeterministic() ? "DFA" : "NDFA"));
 
-        System.out.println("Original NFA:");
-        nfa.display();
+        DFA dfa = fa.toDFA();
+        System.out.println("\n" + dfa);
 
-        FiniteAutomaton dfa = nfa.toDFA();
-
-        System.out.println("Converted DFA:");
-        dfa.display();
+        System.out.println("\nGrammar Classification: " + fa.getGrammarType());
     }
 }
